# score_cpp_policies

./: .gitignore  BUILD.bazel  CONTRIBUTION.md  MODULE.bazel  NOTICE  README.md  presets.bzl
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: improvement.md
.github/workflows/: tests.yml
clang_tidy/: .clang-tidy  BUILD.bazel  README.md  clang_tidy.bazelrc  defs.bzl  presets.bzl
coverage/: BUILD.bazel  README.md  coverage.bazelrc  defs.bzl  effective_coverage.py  filter_regexes.txt  generate_coverage_html.sh  justify.py  merger.py  reporter.py  requirements_lock.txt
sanitizers/: BUILD.bazel  README.md  presets.bzl  sanitizers.bazelrc  wrapper.sh
sanitizers/constraints/: BUILD.bazel
sanitizers/features/: BUILD.bazel
sanitizers/flags/: BUILD.bazel
sanitizers/private/: BUILD.bazel  expand_template.bzl  merge_suppressions.bzl
sanitizers/suppressions/: asan.supp  lsan.supp  tsan.supp  ubsan.supp
sanitizers/templates/: asan.env.template  asan_ubsan_lsan.env.template  lsan.env.template  tsan.env.template  ubsan.env.template
tests/: .bazelrc  .clang-tidy  BUILD.bazel  MODULE.bazel  sample_test.cpp
tests/coverage/: BUILD.bazel  coverable.cpp  coverable.h  coverable_test.cpp  coverage_filter_regexes.txt  coverage_justifications.yaml  reporter_test.py  uncovered.cpp  uncovered.h
tests/negative/: asan_fail.cpp  lsan_fail.cpp  tsan_fail.cpp  ubsan_fail.cpp  verify_sanitizer_failure.sh
tests/tools/lint/: BUILD.bazel  linters.bzl
tests/violations/: clang_tidy_violation.cpp
tools/: BUILD.bazel  check_bazelrc_equivalence.py  preset.bazelrc
