# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("//sanitizers/private:expand_template.bzl", "expand_template")

exports_files(
    ["sanitizers.bazelrc"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "suppressions",
    srcs = [
        "suppressions/asan.supp",
        "suppressions/lsan.supp",
        "suppressions/tsan.supp",
        "suppressions/ubsan.supp",
    ],
    visibility = ["//visibility:public"],
)

_SANITIZERS = {
    "asan": "templates/asan.env.template",
    "ubsan": "templates/ubsan.env.template",
    "lsan": "templates/lsan.env.template",
    "tsan": "templates/tsan.env.template",
}

_ROOTS = {
    "absolute": "/",
    "relative": "./",
}

[
    expand_template(
        name = sanitizer + "_" + root_name + "_env",
        out = sanitizer + "_" + root_name + "_sanitizer.env",
        substitutions = {"%ROOT%": root_path},
        target_compatible_with = ["//sanitizers/constraints:any_sanitizer"],
        template = template,
        visibility = ["//visibility:public"],
    )
    for sanitizer, template in _SANITIZERS.items()
    for root_name, root_path in _ROOTS.items()
]

sh_binary(
    name = "wrapper",
    srcs = ["wrapper.sh"],
    data = select({
        "//sanitizers/flags:asan_on": [
            "suppressions/asan.supp",
            ":asan_relative_env",
        ],
        "//conditions:default": [],
    }) + select({
        "//sanitizers/flags:ubsan_on": [
            "suppressions/ubsan.supp",
            ":ubsan_relative_env",
        ],
        "//conditions:default": [],
    }) + select({
        "//sanitizers/flags:lsan_on": [
            "suppressions/lsan.supp",
            ":lsan_relative_env",
        ],
        "//conditions:default": [],
    }) + select({
        "//sanitizers/flags:tsan_on": [
            "suppressions/tsan.supp",
            ":tsan_relative_env",
        ],
        "//conditions:default": [],
    }),
    target_compatible_with = ["//sanitizers/constraints:any_sanitizer"],
    visibility = ["//visibility:public"],
)
