# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_cpp_policies_tests",
    version = "0.0.0",
)

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

bazel_dep(name = "score_cpp_policies", version = "0.0.0")
local_path_override(
    module_name = "score_cpp_policies",
    path = "..",
)

# LLVM toolchain for clang-tidy (provides @llvm_toolchain//:clang-tidy).
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")
