# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(name = "score_cpp_policies_tests")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")
bazel_dep(name = "score_cpp_policies")
local_path_override(
    module_name = "score_cpp_policies",
    path = "..",
)

# LLVM toolchain for clang-tidy (provides @llvm_toolchain//:clang-tidy) and sanitizers.

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    extra_known_features = [
        "@score_cpp_policies//sanitizers/features:debug_symbols",
        "@score_cpp_policies//sanitizers/features:asan",
        "@score_cpp_policies//sanitizers/features:ubsan",
        "@score_cpp_policies//sanitizers/features:lsan",
        "@score_cpp_policies//sanitizers/features:tsan",
    ],
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")

# Python toolchain — required to run @score_cpp_policies//coverage:justify and
# :effective_coverage (py_binary targets that depend on pyyaml for Python 3.12).
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)
