# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@bazelrc-preset.bzl", "bazelrc_preset", "bazelrc_preset_test")
load("//:presets.bzl", "PRESETS")

bazelrc_preset(
    name = "preset",
    extra_presets = PRESETS,
    visibility = ["//visibility:public"],
)

bazelrc_preset_test(
    name = "preset_schema_test",
    extra_presets = PRESETS,
)

exports_files(
    ["check_bazelrc_equivalence.py"],
    visibility = ["//visibility:public"],
)
