# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")

# Minimal debug info for stack traces (-g1); combine with --strip=never (set in sanitizers.bazelrc).
cc_args(
    name = "debug_symbols_args",
    actions = [
        "@rules_cc//cc/toolchains/actions:compile_actions",
    ],
    args = ["-g1"],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "debug_symbols",
    args = [":debug_symbols_args"],
    feature_name = "debug_symbols",
    visibility = ["//visibility:public"],
)

cc_args(
    name = "asan_compile_args",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-fsanitize=address"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "asan_link_args",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["-fsanitize=address"],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "asan",
    args = [
        ":asan_compile_args",
        ":asan_link_args",
    ],
    feature_name = "score_asan",
    implies = ["debug_symbols"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "ubsan_compile_args",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-fsanitize=undefined"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "ubsan_link_args",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = [
        "-fsanitize=undefined",
        # Clang-only: links the UBSan C++ runtime; not supported by GCC (see sanitizers/README.md).
        "-fsanitize-link-c++-runtime",
    ],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "ubsan",
    args = [
        ":ubsan_compile_args",
        ":ubsan_link_args",
    ],
    feature_name = "score_ubsan",
    implies = ["debug_symbols"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "lsan_compile_args",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-fsanitize=leak"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "lsan_link_args",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["-fsanitize=leak"],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "lsan",
    args = [
        ":lsan_compile_args",
        ":lsan_link_args",
    ],
    feature_name = "score_lsan",
    implies = ["debug_symbols"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "tsan_compile_args",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = [
        "-fsanitize=thread",
        "-O1",
    ],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "tsan_link_args",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["-fsanitize=thread"],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "tsan",
    args = [
        ":tsan_compile_args",
        ":tsan_link_args",
    ],
    feature_name = "score_tsan",
    implies = ["debug_symbols"],
    visibility = ["//visibility:public"],
)
