# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "asan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "asan_on",
    flag_values = {":asan": "True"},
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "ubsan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ubsan_on",
    flag_values = {":ubsan": "True"},
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "lsan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "lsan_on",
    flag_values = {":lsan": "True"},
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "tsan",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "tsan_on",
    flag_values = {":tsan": "True"},
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "any_sanitizer",
    match_any = [
        ":asan_on",
        ":ubsan_on",
        ":lsan_on",
        ":tsan_on",
    ],
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "any_asan_ubsan_lsan",
    match_any = [
        ":asan_on",
        ":ubsan_on",
        ":lsan_on",
    ],
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "asan_ubsan_lsan",
    match_all = [
        ":asan_on",
        ":ubsan_on",
        ":lsan_on",
    ],
    visibility = ["//visibility:public"],
)
